# BPJS-QA

./: .gitignore  README.md  app.py  knowledge_embedding.py  pyproject.toml
config/: database.py  environment.py
services/: chat.py
templates/: index.html
